[metadata]
name = company_model
version = 1.0.0
description = work model of hiring
author = Andrii Sidachenko
;licence = MIT
;licence_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages =
	company
install_requires =
	requests>=2
python_requires =
	>=3.7
package_dir =
	=src
zip_safe =
	no

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov==2.12.1
	mypy>=0.96
	flake8>=3.9
	tox>=3.24

[options.package_data]
company = py.typed

[flake8]
max-line-length = 160

